[TASK-2] Add Database with Identity to Infrastructure

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=YAGO.FantasyWorld;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
