--- a/src/Host/YAGO.FantasyWorld.Server.Host.csproj
+++ b/src/Host/YAGO.FantasyWorld.Server.Host.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\Infrastracture\YAGO.FantasyWorld.Server.Infrastracture.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Yago.FantasyWorld.ApiContracts">
+      <HintPath>..\..\libs\Yago.FantasyWorld.ApiContracts.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
