--- a/src/Domain/YAGO.FantasyWorld.Server.Domain.csproj
+++ b/src/Domain/YAGO.FantasyWorld.Server.Domain.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="Yago.FantasyWorld.ApiContracts">
+      <HintPath>..\..\libs\Yago.FantasyWorld.ApiContracts.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
