--- a/src/Infrastracture/YAGO.FantasyWorld.Server.Infrastracture.csproj
+++ b/src/Infrastracture/YAGO.FantasyWorld.Server.Infrastracture.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\Domain\YAGO.FantasyWorld.Server.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Yago.FantasyWorld.ApiContracts">
+      <HintPath>..\..\libs\Yago.FantasyWorld.ApiContracts.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
