--- a/src/Infrastracture/YAGO.FantasyWorld.Server.Infrastracture.csproj
+++ b/src/Infrastracture/YAGO.FantasyWorld.Server.Infrastracture.csproj
@@ -19,12 +19,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\YAGO.FantasyWorld.Server.Application.csproj" />
-    <ProjectReference Include="..\Domain\YAGO.FantasyWorld.Server.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Yago.FantasyWorld.ApiContracts">
-      <HintPath>..\..\libs\Yago.FantasyWorld.ApiContracts.dll</HintPath>
+    <Reference Include="YAGO.FantasyWorld.ApiContracts">
+      <HintPath>..\..\libs\YAGO.FantasyWorld.ApiContracts.dll</HintPath>
+    </Reference>
+    <Reference Include="YAGO.FantasyWorld.Domain">
+      <HintPath>..\..\libs\YAGO.FantasyWorld.Domain.dll</HintPath>
     </Reference>
   </ItemGroup>
 
