[TASK-11308] Return Domain lib to Server solution

--- a/src/Host/YAGO.FantasyWorld.Server.Host.csproj
+++ b/src/Host/YAGO.FantasyWorld.Server.Host.csproj
@@ -9,14 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\YAGO.FantasyWorld.Domain\YAGO.FantasyWorld.Domain.csproj" />
     <ProjectReference Include="..\Application\YAGO.FantasyWorld.Server.Application.csproj" />
     <ProjectReference Include="..\Infrastracture\YAGO.FantasyWorld.Server.Infrastracture.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Yago.FantasyWorld.Domain">
-      <HintPath>..\..\libs\Yago.FantasyWorld.Domain.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
